添加测试的groupid，修改测试列表查询添加状态处理
