# lib/units/api/swagger/api_v1.yaml
@@ -284,7 +284,7 @@ paths:
             $ref: '#/definitions/ErrorResponse'
       security:
         - accessTokenAuth: []
-  /testings:
+  /testings/{status}:
     x-swagger-router-controller: testing
     get:
       summary: Testing List
@@ -293,6 +293,11 @@ paths:
       tags:
         - testing
       parameters:
+        - name: status
+          in: path
+          description: test status
+          required: true
+          type: string
         - name: fields
           in: query
           description: >-
@@ -311,7 +316,7 @@ paths:
             $ref: '#/definitions/ErrorResponse'
       security:
         - accessTokenAuth: []
-  '/testings/{id}':
+  '/testing/{id}/report/':
     x-swagger-router-controller: testing
     get:
       summary: Testing Report Info
