# res/app/testing/history/history-controller.js
@@ -3,7 +3,7 @@ module.exports = function HistoryCtrl(
   $http
 ) {
   // 读取当前用户所有历史的测试记录
-  $http.get('/api/v1/testings/')
+  $http.get('/api/v1/testings/Finish')
     .then(function(response) {
       console.log(response)
       var testings = response['data']['testings']
